# RevoLab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.agents/: .gitkeep
assets/USD/: .asset_hash  config.yaml
assets/USD/configuration/: revotron_bimanual_revo3_robot.usd
assets/grasp_cache/hora/: revo3_right_grasp_ball.npy  revo3_right_grasp_cylinder.npy
assets/usd/dexsuite/: Tianji_Revo3_Right_tactile.usda  tactile_cube_sdf.usda
assets/usd/inhand/: right_hand.usd
checkpoints/hora/: revo3_right_ball_stage1_best.pth  revo3_right_cylinder_stage1_best.pth
deploy/revo3/: README.md  pyproject.toml
deploy/revo3/config/: policy_template.yaml  revo3_right.yaml
deploy/revo3/revo3_deploy/: __init__.py  input_builder.py  policy_runner.py  robot_profile.py  sdk_hand_io.py
deploy/revo3/revo3_deploy/cli/: __init__.py  export_policy.py  run_policy.py
deploy/revo3/scripts/: export_policy.py  run_policy.py
scripts/: download-checkpoints.sh  upload-checkpoints.sh
scripts/hora/: export_onnx.py  train.py  train_s1.sh  train_s2.sh
scripts/rl_games/: play.py  play_dynamic_handover.py  train_dynamic_handover.py
scripts/rsl_rl/: play.py  train.py
source/BrainCo_DexHand/: MANIFEST.in  README.md  setup.py
tactile_simulation_references_20260520/: MANIFEST.md  README_TACSL_TACTILE_PLAN.md  arxiv_2602.21625_abs.html
usd/: Tianji_Revo3_Right.usd
usd/configuration/: Tianji_Revo3_Right_physics.usd  Tianji_Revo3_Right_robot.usd  Tianji_Revo3_Right_sensor.usd  revo3_right_hand_direct_physics.usd  right_hand_physics.usd  right_hand_sensor.usd
(+229 files in other folders)
